tests/ui/huge_index.stderr
error: invalid integer index
 --> tests/ui/huge_index.rs:3:20
  |
3 | type X = Cursor!(a.10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000: i32);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
