tests/ui/huge_index.rs
use serde_cursor::Cursor;

type X = Cursor!(a.10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000: i32);

fn main() {}
